# rust

./: Cargo.toml  README.md
add-backtrace-to-built-in-errors/: Cargo.toml
add-backtrace-to-built-in-errors/src/: main.rs
convert-hashmap-to-struct-through-serde/: Cargo.toml
convert-hashmap-to-struct-through-serde/src/: main.rs
hide-anyhow-with-thiserror/: Cargo.toml
hide-anyhow-with-thiserror/src/: main.rs
how-to-add-backtrace-to-custom-errors/: Cargo.toml  README.md
how-to-add-backtrace-to-custom-errors/src/: main.rs
how-to-check-literals-in-compile-time/: Cargo.toml
how-to-check-literals-in-compile-time/src/: lib.rs  main.rs
how-to-combine-results/: Cargo.toml
how-to-combine-results/src/: combine.rs  main.rs
how-to-share-logics-between-structs/: Cargo.toml
how-to-share-logics-between-structs/src/: main.rs
how-to-use-punycode/: Cargo.toml
how-to-use-punycode/src/: main.rs
inheritance/src/: main.rs
partial-eq/: Cargo.toml
partial-eq/src/: main.rs
rethink-error/: Cargo.toml
rethink-error/src/: main.rs
schemars-patch-definition/: Cargo.toml
schemars-patch-definition/src/: main.rs
simple_derive_macro/: Cargo.toml
simple_derive_macro/src/: lib.rs
simple_derive_macro/tests/: simple_derive_macro_test.rs
split-impl/: Cargo.toml
split-impl/src/: f1.rs  main.rs
thread-safe-static-dependency-injection-pattern/: Cargo.toml
tonic-grpc-web-client/: Cargo.toml  build.rs
tonic-grpc-web-client/src/: main.rs
trait-same-structure/: Cargo.toml
trait-same-structure/src/: main.rs
