[package]
name = "hide-anyhow-with-thiserror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
anyhow = { version = "1.0.70", features = ["backtrace", "std"] } # `backtrace` feature is necessary to embed backtrace in anyhow::Error
