[package]
name = "schemars-patch-definition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.83.0", features = ["derive", "runtime"] }
kube-runtime = { version = "0.83.0", features = ["unstable-runtime"] }
schemars = "0.8.12"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
k8s-openapi = { version = "0.18.0", features = ["v1_26", "api", "schemars"] }
validator = { version = "0.14.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.9.1"
