[package]
name = "thread-safe-static-dependency-injection-pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
tokio = { version = "1", features = ["rt-multi-thread", "full"] }
