[package]
name = "tonic-grpc-web-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
http = "0.2.9"
hyper = "0.14.26"
prost = "0.11.9"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "rt", "macros"] }
tonic = { version = "0.9.2", features = ["codegen"] }
tonic-web = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
